Downgrad to Java8